...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                tools:text="password"/>
            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:layout_gravity="center"
                android:text="@string/loginTitle"
                android:textColor="@color/black"/>
...
